--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -3,7 +3,7 @@ project:
 
 website:
   title: ""
-  site-url: "https://.github.io/"
+  site-url: "https://.github.io/https://github.com/alex4321/DVC-OpenAI-RAG-assistants.git"
   description: ""
-  repo-branch: 
-  repo-url: "https://github.com//"
+  repo-branch: main
+  repo-url: "https://github.com//https://github.com/alex4321/DVC-OpenAI-RAG-assistants.git"
