--- a/settings.ini
+++ b/settings.ini
@@ -3,10 +3,10 @@
 # See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
 
 ### Python library ###
-repo = 
-lib_name = %(repo)s
+repo = https://github.com/alex4321/DVC-OpenAI-RAG-assistants.git
+lib_name = 
 version = 0.0.1
-min_python = 3.7
+min_python = 3.10
 license = apache2
 black_formatting = False
 
@@ -19,7 +19,7 @@ tst_flags = notest
 put_version_in_init = True
 
 ### Docs ###
-branch = 
+branch = main
 custom_sidebar = False
 doc_host = https://%(user)s.github.io
 doc_baseurl = /%(repo)s
